--- a/samTemplate.yaml
+++ b/samTemplate.yaml
@@ -10,7 +10,7 @@ Resources:
       CodeUri: ./LambdaCode
       MemorySize: 128
       Timeout: 30
-      Role: 'arn:aws:iam::115404303693:role/MyLambdaRole'
+      Role: 'arn:aws:iam::115404303693:role/CloudFormationServiceRole'
       Events:
         getAZsAPI:
           Type: Api
